[project]
name = 'MMDVM-LastHeard'
version = '0.1b8'
description = 'Telegram bot to monitor the last transmissions of a MMDVM gateway'
keywords = ['amateur-radio', 'mmdvm', 'digital-voice', 'pi-star', 'wpsd', 'dvswitch']
readme = 'README.md'
license = 'GPL-3.0-or-later'
license-files = ['LICENSE']
authors = [
  { name = 'Luca', email = '61653175+iu2frl@users.noreply.github.com' },
  { name = 'Hafizi Ruslan', email = '9w2lgx@mhrtech.my' },
]
maintainers = [{ name = 'Hafizi Ruslan', email = '9w2lgx@mhrtech.my' }]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Other Audience',
  'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
  'Natural Language :: English',
  'Natural Language :: Malay',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Programming Language :: Python :: 3.15',
  'Topic :: Communications :: Ham Radio',
]
urls.github = 'https://git.new/MMDVM-LastHeard'
urls.repository = 'https://github.com/HafiziRuslan/MMDVM-LastHeard.git'
urls.sourcecode = 'https://github.com/0x9900/aprstar.git'
urls.history = 'https://github.com/HafiziRuslan/MMDVM-LastHeard/blob/master/CHANGELOG.md'
urls.issuetracker = 'https://github.com/HafiziRuslan/MMDVM-LastHeard/issues'
requires-python = '>=3.13'
dependencies = [
  'httpx>=0.28.1',
  'humanize>=4.15.0',
  'python-dotenv>=1.2.2',
  'python-telegram-bot>=22.7',
  'safezip>=0.1.6',
]

[tool.ruff]
line-length = 150
analyze.detect-string-imports = true
format.quote-style = 'single'
format.indent-style = 'tab'
format.docstring-code-format = true
format.line-ending = 'lf'
format.skip-magic-trailing-comma = true
lint.isort.combine-as-imports = true
lint.isort.default-section = 'first-party'
lint.isort.force-single-line = true
